<resources>
    <string name="app_name">YoutubeMuzikDinleyicisi</string>

    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="register_name">Name</string>
    <string name="register_surname">Surname</string>
    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="link_signup">No account yet? Create one</string>

</resources>
